--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,47 +1,47 @@
 {
-    "nodatafound": "Dados anteriores não encontrados nessa porra.",
-    "retrievingdata": "Recuperando dados armazenados anteriormente dessa delicia.",
-    "datarestored": "Dados armazenados anteriormente recuperados com êxito porra.",
-    "greyuser": "Apenas Seguranças ou superiores podem usar o chatbot, seu lixo.",
-    "bouncer": "O chatbot não pode mover pessoas na fila de espera quando usado por um segurança viadão.",
+    "nodatafound": "Dados anteriores não encontrados.",
+    "retrievingdata": "Recuperando dados armazenados anteriormente.",
+    "datarestored": "Dados armazenados anteriormente recuperados com êxito.",
+    "greyuser": "Apenas Seguranças ou superiores podem usar o bot.",
+    "bouncer": "O bot não pode mover pessoas na fila de espera quando usado por um segurança.",
     "online": "/me %%BOTNAME%% v%%VERSION%% bem finíssimo ativado!",
 
 
-    "welcome": "Seje welcomido(a), @%%NAME%% amorzinho, leia nossas regras para não fazer nenhuma besteira http://goo.gl/R5CLI7 <3 <3",
-    "welcomeback": "Seje welcomido(a) de volta, @%%NAME%% amorzinho :blue_heart: :blue_heart:",
-    "songknown": "@%%NAME%%, essa música está no histórico porra, vou pular",
-    "timelimit": "@%%NAME%%, sua música tem duração maior que %%MAXLENGTH%% minutos. Você não pode rodar videos longos assim PORRA.",
+    "welcome": "Seja bem-vindo(a), @%%NAME%%, leia nossas regras para não fazer nenhuma besteira [link soon] :sparkling_heart:",
+    "welcomeback": "Seja bem-vindo(a) de volta, @%%NAME%% :purple_heart: :purple_heart:",
+    "songknown": "@%%NAME%%, essa música está no histórico, vou pular",
+    "timelimit": "@%%NAME%%, sua música tem duração maior que %%MAXLENGTH%% minutos. Você não pode rodar videos longos assim.",
     "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar música de própria autoria!",
     "isblacklisted": "/me Essa música está na lista negra %%BLACKLIST%%! Pulando música...",
 
 
-    "isopen": "/me Rodam rodammm começou! Use !join para participar! você poderá ser movido para cima na fila, ou para baixo",
-    "winnerpicked": "/me Um viadão foi escolhido! @%%NAME%% ganhou a posição %%POSITION%%, todos verão sua bundinha negra",
+    "isopen": "/me Roleta Ativada!! Use !join para participar! Você poderá ser movido para cima ou para baixo na fila.",
+    "winnerpicked": "/me Um vencedor foi escolhido! @%%NAME%% ganhou a posição %%POSITION%%.",
     
-    "ball": "/me A pergunta do viadão %%NAME%% foi: \"%%QUESTION%%\" e a resposta de %%BOTNAME%% é: \"%%RESPONSE%%\"",
+    "ball": "/me A pergunta de %%NAME%% foi: \"%%QUESTION%%\" e a resposta de %%BOTNAME%% é: \"%%RESPONSE%%\"",
     "notghosting": "[%%NAME1%%] %%NAME2%% não virou fantasma.",
     "ghosting": "[%%NAME1%%] %%NAME2%% deve ter virado fantasma.",
 
-    "alreadyadding": "/me Usuário já está sendo adicionado carai! Posição desejada alterada para %%POSITION%%.",
+    "alreadyadding": "/me Usuário já está sendo adicionado! Posição desejada alterada para %%POSITION%%.",
     "adding": "/me @%%NAME%% foi adicionado à fila. Posição atual: %%POSITION%%.",
 
 
-    "usernotfound": "/me Viadão não encontrado.",
-    "notdisconnected": "/me @%%NAME%% não saiu enquanto estive dando a bunda aqui.",
+    "usernotfound": "/me Usuário não encontrado.",
+    "notdisconnected": "/me @%%NAME%% não saiu enquanto estive frescando aqui.",
     "noposition": "/me Última posição não reconhecida. A fila de espera precisa ser atualizada pelo menos uma vez para registrar posições.",
-    "toolongago": "/me @%%NAME%% foi dar o cu a muito tempo atrás porra: %%TIME%%, não fode",
-    "valid": "/me @%%NAME%% foi dar o cu há %%TIME%% atrás e deve ter posição %%POSITION%%.",
+    "toolongago": "/me @%%NAME%% desconectou-se a muito tempo: %%TIME%%, não fode",
+    "valid": "/me @%%NAME%% desconectou-se %%TIME%% atrás e deve ter posição %%POSITION%%.",
 
 
-    "warning1": "@%%NAME%%, você esteve dando o cu por %%TIME%%, responda dentro de 2 minutos ou você será removido da fila de espera.",
+    "warning1": "@%%NAME%%, você esteve inativo por %%TIME%%, responda dentro de 2 minutos ou você será removido da fila de espera.",
     "warning2": "@%%NAME%%, você será removido em breve por inatividade se não responder.",
     "afkremove": "@%%NAME%%, você foi removido por estar inativo por %%TIME%%. Você teve a posição %%POSITION%%. Use o chat pelo menos uma vez em 1 hora se quiser tocar.",
 
 
-    "caps": "@%%NAME%%, DESLIGA ESSE CAPS/SHIFT FILHO DA MÃE SEM COSTUMES <3.",
-    "askskip": "@%%NAME%%, não peça para pular FILHO DA PUTA.",
+    "caps": "@%%NAME%%, desligue seu capslock, por favor!",
+    "askskip": "@%%NAME%%, não peça para pular.",
     "spam": "/me @%%NAME%%, não faça spam caralho.",
-    "roomadvertising": "@%%NAME%%, não poste link de outras comunidades aqui, SEU FILHO DA PUTA.",
+    "roomadvertising": "@%%NAME%%, não poste link de outras comunidades aqui ou será banido(a)!.",
     "adfly": "@%%NAME%%, mude seu autowoot. Nós sugerimos o Origem Woot: http://origem-woot.net/",
 
     "validgiftags": "/me [@%%NAME%%] http://media.giphy.com/media/%%ID%%/giphy.gif [Tags: %%TAGS%%]",
@@ -59,10 +59,10 @@
     "invalidlimitspecified": "/me [@%%NAME%%] Limite inválido.",
     "invalidpositionspecified": "/me [@%%NAME%%] Posição inválida.",
     "whois": "/me [%%NAME1%%] Viadão: %%NAME2%%, ID: %%ID%%, Rank: %%RANK%%, Registro: %%JOINED%%, Nível: %%LEVEL%%, Linguagem: %%LANGUAGE%%, Avatar: %%AVATAR%%, Status: %%STATUS%%%%PROFILE%%",
-    "toggleon": "/me [@%%NAME%%] %%FUNCTION%% ativado carai.",
-    "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado carai.",
-    "afkremoval": "Remoção de AFKs dadeiros de cu",
-    "afksremoved": "AFKs dadeiros de cu removidos",
+    "toggleon": "/me [@%%NAME%%] %%FUNCTION%% ativado!",
+    "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado!",
+    "afkremoval": "Remoção de AFKs",
+    "afksremoved": "AFKs removidos",
     "afklimit": "Limite AFK",
     "autodisable": "autodisable",
     "autoskip": "autoskip",
@@ -90,27 +90,27 @@
     "afkstatusreset": "/me [@%%NAME%%] Status AFK resetado: @%%USERNAME%%.",
     "inactivefor": "/me [@%%NAME%%] @%%USERNAME%% esteve inativo por %%TIME%%.",
     "autowoot": "/me Nós recomendamos o Autowoot Origem Woot: http://origem-woot.net/",
-    "brandambassador": "/me Um Embaixador de Marca é a voz do ban no plug.dj. Eles promovem bans, ajudam as comunidades com bans e divulgam a plug.dj para todo o mundo com bans. Mais info: https://plug.dj/ba",
-    "bouncerplusrank": "/me [@%%NAME%%] Você precisa ser Coordenador ou superior para ativar o Segurança+, seu falho.",
+    "brandambassador": "/me Um Embaixador de Marca é a voz dos usuários do plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundo. Mais info: https://plug.dj/ba",
+    "bouncerplusrank": "/me [@%%NAME%%] Você precisa ser Coordenador ou superior para ativar o Segurança+, mana.",
     "chatcleared": "/me [@%%NAME%%] limpou o chat com o cu dele.",
     "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo com o cu dele.",
     "commandslink": "/me Comandos do %%BOTNAME%%: %%LINK%%",
-    "eatcookie": "/me ama pirokas.",
-    "nousercookie": "/em Não vejo um viadão chamado %%NAME%% na sala. Então vou enfiar isso no seu cu.",
-    "selfcookie": "/me @%%NAME%%, você é safado heim, DIVIDE COM OS OUTROS FILHO DA PUTA, de nada :blue_heart:",
+    "eatcookie": "/me ama mamar.",
+    "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse cookie sozinho. :full_moon_with_face:",
+    "selfcookie": "/me @%%NAME%%, você é mesquinhx mesmo viu? DIVIDE COM OS OUTROS MANA, de nada :purple_heart:",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
     "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
-    "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários, seu falho.",
+    "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
     "emojilist": "/me Emojis: %%LINK%%",
-    "notinwaitlist": "@%%NAME%%, você não está na lista de espera carai.",
-    "eta": "/me @%%NAME%% todos verão sua bundinha em aproximadamente %%TIME%% <3.",
-    "facebook": "/me Curta nossa página no Facebook: https://www.fb.com/exercitopdj",
+    "notinwaitlist": "@%%NAME%%, você não está na lista de espera.",
+    "eta": "/me @%%NAME%%, você tocará em aproximadamente %%TIME%% <3.",
+    "facebook": "/me (Sem página/grupo no Facebook)",
     "starterhelp": "/me Essa imagem te ajudará a usar e entender o plug.dj: %%LINK%%",
-    "roulettejoin": "/me @%%NAME%% entrou na roleta! (Use !leave para arregar seu merda.)",
+    "roulettejoin": "/me @%%NAME%% entrou na roleta! (Use !leave caso queira sair!.)",
     "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve na sala por %%TIME%%.",
-    "kickrank": "/me [@%%NAME%%] Você não pode kickar alguém do mesmo rank ou superior, SEU MERDA!",
-    "kick": "[@%%NAME%%], @%%USERNAME%% FILHO DA PUTA, você está sendo kickado da comunidade por %%TIME%% minutos, ninguém mandou ser viadão de mais.",
-    "kill": "/me Filho da puta, não me mata CARALH..........Bot is dead",
+    "kickrank": "/me [@%%NAME%%] Você não pode kickar alguém do mesmo rank ou superior, seu flopado!",
+    "kick": "[@%%NAME%%], @%%USERNAME%% você está sendo kickado da comunidade por %%TIME%% minutos.",
+    "kill": "/me Bot desativado!",
     "logout": "/me [@%%NAME%%] Deslogando %%BOTNAME%%",
     "rouletteleave": "/me @%%NAME%% deixou a roleta!",
     "songlink": "/me [@%%NAME%%] Link para a música atual: %%LINK%%",
@@ -121,29 +121,29 @@
     "motdset": "/me Mensagem do Dia:  %%MSG%%",
     "motdintervalset": "/me Intervalo da Mensagem do Dia: %%INTERVAL%% músicas.",
     "addbotwaitlist": "/me @%%NAME%%, não tente me adicionar à fila de espera, por favor.",
-    "move": "/me [%%NAME%% usou 'move', super efetivo no Pokemon tipo Falho.]",
-    "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado com uma piroka.",
+    "move": "/me [%%NAME%% usou 'move']",
+    "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado.",
     "mutedmaxtime": "/me [@%%NAME%%] Você só pode mutar até no máximo %%TIME%% minutos.",
-    "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado com uma piroka por %%TIME%% minuto(s).",
+    "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado por %%TIME%% minuto(s).",
     "unmuted": "/me [@%%NAME%%] @%%USERNAME%% desmutado.",
-    "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior, SEU MERDA!.",
+    "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior, seu flopado!",
     "oplist": "/me Lista OP: %%LINK%%",
-    "pong": "/me Pong NO TEU CU FILHO DA PUTA!",
-    "reload": "/me Vou queimar uns negros ali, já volto.......",
+    "pong": "/me Pong! :tennis:",
+    "reload": "/me Reiniciando...",
     "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na fila de espera.",
     "roomrules": "/me Encontre as regras da sala aqui: %%LINK%%",
     "sessionstats": "/me [@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
-    "skip": "/me [%%NAME%% usou 'skip', é super efetivo no pokemon tipo Merda.]",
-    "madeby": "/me Este bot foi feito por %%NAME%%, e editado por Big Boss amorzinho.",
-    "activefor": "Estive dando o cu por %%TIME%%.",
+    "skip": "/me [%%NAME%% usou 'skip']",
+    "madeby": "/me Este bot foi feito por %%NAME%%, e editado por @fu :blush:",
+    "activefor": "Estive online por %%TIME%%.",
     "swapinvalid": "/me [@%%NAME%%] Usuário inválido.",
     "swapwlonly": "/me [@%%NAME%%] Use !swap somente com usuários que estão na fila de espera.",
     "swapping": "/me Trocando posições: %%NAME1%% com %%NAME2%%.",
-    "genres": "/me Os generos permitidos são videos de 'Zoeira', Poops, MLG's e etc, música somente de madrugada",
-    "notbanned": "/me [@%%NAME%%] Usuário mencionado não foi banido para a casa da avó dadeira de cu dele.",
+    "genres": "/me Todos os gêneros musicais são permitidos! :purple_heart:",
+    "notbanned": "/me [@%%NAME%%] Usuário mencionado não foi banido.",
     "unmutedeveryone": "/me [@%%NAME%%] Todos foram desmutados.",
     "unmuteeveryonerank": "/me [@%%NAME%%] Somente Coordenadores podem desmutar todos os usuários de uma vez.",
-    "notmuted": "/me [@%%NAME%%] Usuário mencionado não foi mutado com a piroka do Kid Bengala com Ebola.",
+    "notmuted": "/me [@%%NAME%%] Usuário mencionado não foi mutado.",
     "unmuterank": "/me [@%%NAME%%] Você não pode desmutar usuários do mesmo rank ou superior.",
     "commandscd": "/me [@%%NAME%%] O tempo de espera de comandos para usuários agora é %%TIME%% segundos.",
     "voteratio": "/me [@%%NAME%%] @%%USERNAME%% ~ woots: %%WOOT%%, mehs: %%MEHS%%, ratio (w/m): %%RATIO%%.",
