--- a/lang/pt.json
+++ b/lang/pt.json
@@ -89,7 +89,7 @@
     "maximumafktimeset": "/me [@%%NAME%%] Duração máxima de AFK agora é: %%TIME%% minutos.",
     "afkstatusreset": "/me [@%%NAME%%] Status AFK resetado: @%%USERNAME%%.",
     "inactivefor": "/me [@%%NAME%%] @%%USERNAME%% esteve inativo por %%TIME%%.",
-    "autowoot": "/me Nós recomendamos o Autowoot Origem Woot: http://origem-woot.net/",
+    "autowoot": "/me Recomandamos o OrigemWoot, com ele você pode dar auto-Legal(Woot!) e visualizar nossos emotes! Link: [http://origem-woot.net/Instalation]  ",
     "brandambassador": "/me Um Embaixador de Marca é a voz dos usuários do plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundo. Mais info: https://plug.dj/ba",
     "bouncerplusrank": "/me [@%%NAME%%] Você precisa ser Coordenador ou superior para ativar o Segurança+, mana.",
     "chatcleared": "/me [@%%NAME%%] limpou o chat com o cu dele.",
@@ -97,7 +97,7 @@
     "commandslink": "/me Comandos do %%BOTNAME%%: %%LINK%%",
     "eatcookie": "/me ama mamar.",
     "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse cookie sozinho. :full_moon_with_face:",
-    "selfcookie": "/me @%%NAME%%, você é mesquinhx mesmo viu? DIVIDE COM OS OUTROS MANA, de nada :purple_heart:",
+    "selfcookie": "/me @%%NAME%%, você é mesquinho mesmo, viu? DIVIDE A ZOEIRA COM OS OUTROS! :purple_heart:",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
     "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
     "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
