--- a/lang/pt.json
+++ b/lang/pt.json
@@ -10,9 +10,9 @@
     "welcome": "Seja bem-vindo(a), @%%NAME%%! Leia nossas regras: http://bit.ly/BPRules",
     "welcomeback": "Seja bem-vindo(a) de volta, @%%NAME%% :purple_heart: :purple_heart:",
     "songknown": "@%%NAME%%, essa música está no histórico, vou pular",
-    "timelimit": "@%%NAME%%, sua música tem duração maior que %%MAXLENGTH%% minutos. Você não pode rodar videos longos assim.",
+    "timelimit": "@%%NAME%%, sua música tem duração maior que %%MAXLENGTH%% minutos. Você não pode tocar videos longos assim.",
     "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar música de própria autoria!",
-    "isblacklisted": "/me Essa música está na lista negra %%BLACKLIST%%! Pulando música...",
+    "isblacklisted": "/me Essa música está na lista negra %%BLACKLIST%%! Pulando...",
 
 
     "isopen": "/me A roleta foi iniciada! Use !join para participar! Você poderá ser movido para cima ou para baixo na fila.",
