--- a/lang/pt.json
+++ b/lang/pt.json
@@ -99,6 +99,10 @@
     "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse cookie sozinho. :full_moon_with_face:",
     "selfcookie": "/me @%%NAME%%, você é mesquinho mesmo, viu? DIVIDE A ZOEIRA COM OS OUTROS! :purple_heart:",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
+    "kiss": "/me ama dar beijos.",
+    "nouserkiss": "/em Não vejo %%NAME%% na sala. Vou procurar outro pra beijar.",
+    "selfkiss": "/me @%%NAME%%, você não pode beijar a si mesmo, beije outra pessoa!",
+    "kissed": "/me @%%NAMETO%%, %%NAMEFROM%% %%KISS%%",
     "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
     "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
     "emojilist": "/me Emojis: %%LINK%%",
