--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,4 +1,10 @@
 {
+    "kiss": [
+        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
+        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
+        "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
+	    ],
+    
     "nodatafound": "Dados anteriores não encontrados.",
     "retrievingdata": "Recuperando dados armazenados anteriormente.",
     "datarestored": "Dados armazenados anteriormente recuperados com êxito.",
