--- a/lang/pt.json
+++ b/lang/pt.json
@@ -3,6 +3,11 @@
         "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
         "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
         "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
+        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
+        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
+        "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
+        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
+        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
 	    ],
     
     "nodatafound": "Dados anteriores não encontrados.",
