--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,5 +1,5 @@
 {
-    "kiss": [
+    "kisses": [
         "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
         "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
         "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
