--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,14 +1,14 @@
 {
-    "kisses": [
-        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
-        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
-        "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
-        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
-        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
-        "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
-        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
-        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
-	    ],
+    				"kisses": [
+				        "deu-lhe um beijo bem gostoso.",
+				        "deu-lhe um xero.",
+				        "deu-lhe uma beijoca.",
+				        "deu-lhe um amasso.",
+				        "deu-lhe um beijo e disse \"Eu te amo\"!",
+				        "deu-lhe um abraço e disse \"N\u00e3o me solta\"!",
+				        "deu-lhe um beijo e disse \"Namora comigo\"!",
+				        "deu-lhe um beijo e gritou \"EU TE AMO\"!"
+				    ],
     
     "nodatafound": "Dados anteriores não encontrados.",
     "retrievingdata": "Recuperando dados armazenados anteriormente.",
