--- a/lang/pt.json
+++ b/lang/pt.json
@@ -104,6 +104,10 @@
     "nouserkiss": "/em Não vejo %%NAME%% na sala. Vou procurar outro pra beijar.",
     "selfkiss": "/me @%%NAME%%, você não pode beijar a si mesmo, beije outra pessoa!",
     "kissed": "/me @%%NAMETO%%, %%NAMEFROM%% %%KISS%%",
+    "trans": "/me ama dar beijos.",
+    "nousertrans": "/em Não vejo %%NAME%% na sala. Vou procurar outro pra beijar.",
+    "selftrans": "/me @%%NAME%%, você não pode beijar a si mesmo, beije outra pessoa!",
+    "transd": "/me @%%NAMETO%%, %%NAMEFROM%% %%KISS%%",
     "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
     "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
     "emojilist": "/me Emojis: %%LINK%%",
