--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,6 +1,6 @@
 {
 
-"trans": [
+"transf": [
     'pediu pra você soltar o baseado!',
     'falou que nem com pacto você será engraçado.',
     'ALLAHU AKBAARR!!!',
