--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,24 +1,8 @@
 {
 
 "transf": [
-    'pediu pra você soltar o baseado!',
-    'falou que nem com pacto você será engraçado.',
-    'ALLAHU AKBAARR!!!',
-    'quer te vender trufa.',
-    'chamou o Jailson para te engolir com o oco',
-    'te deu o cu.',
-    'tirou 8 bolas de boliche do cu para vocês jogarem juntos!',
-    'tirou 2 tacos de sinuca para vocês jogarem juntos!',
-    'pediu pra você engravidar ele',
-    'mandou você ir catar coquinho!',
-    'disse que você só toca vídeo ruim!',
-    'disse que seu amor não enche barriga, então ele quer ARROZ, FEIJÃO E PICA',
-    'disse que você ta se achando a rola que matou Cazuza',
-    'espalhou para todo mundo que te comeu ontem!',
-    'espalhou para todo mundo que te deu ontem!',
-    'quer seu corpo nu! :trollface:',
-    'disse pra você mandar nudes'
-        ],
+        "deu-lhe um biscoito de chocolate!",
+    ],
 
     "nodatafound": "Dados anteriores não encontrados.",
     "retrievingdata": "Recuperando dados armazenados anteriormente.",
