--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,5 +1,28 @@
 {
 
+    "transf": [
+        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
+        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
+        "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
+        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
+        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
+        "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
+        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
+        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
+        "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
+        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
+        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
+        "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
+        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
+        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
+        "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
+        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
+        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota",
+        "@%%NAME%% a @%%NAMEFROM%% pediu pra você mostrar os peito de 10 mil",
+        "@%%NAMEFROM%%, olha quem tem buceta amor, a @%%NAME%% fez na tailandia",
+        "@%%NAME%% a @%%NAMEFROM%% disse que você é muito garota"
+    ],
+
     "nodatafound": "Dados anteriores não encontrados.",
     "retrievingdata": "Recuperando dados armazenados anteriormente.",
     "datarestored": "Dados armazenados anteriormente recuperados com êxito.",
