--- a/lang/pt.json
+++ b/lang/pt.json
@@ -100,6 +100,10 @@
     "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse cookie sozinho. :full_moon_with_face:",
     "selfcookie": "/me @%%NAME%%, você é mesquinho mesmo, viu? DIVIDE A ZOEIRA COM OS OUTROS! :purple_heart:",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
+    "subirnemperto": "\/me @%%NAME%% voc\u00ea n\u00e3o é digno nem de chegar perto do martelo.",
+    "subircd": "\/me @%%NAME%% voc\u00ea s\u00f3 poder\u00e1 tentar levantar o martelo novamente em %%TIME%% mínutos.",
+    "subirdigno": "\/me @%%NAME%% voc\u00ea \u00e9 digno do martelo, meus parab\u00e1ins.",
+    "thorndigno": "\/me @%%NAME%% voc\u00ea n\u00e3o \u00e9 digno do martelo."
     "kiss": "/me ama dar beijos.",
     "nouserkiss": "/em Não vejo %%NAME%% na sala. Vou procurar outro pra beijar.",
     "selfkiss": "/me @%%NAME%%, você não pode beijar a si mesmo, beije outra pessoa!",
