--- a/lang/pt.json
+++ b/lang/pt.json
@@ -103,7 +103,7 @@
     "subirnemperto": "\/me @%%NAME%% voc\u00ea n\u00e3o é digno nem de chegar perto do martelo.",
     "subircd": "\/me @%%NAME%% voc\u00ea s\u00f3 poder\u00e1 tentar levantar o martelo novamente em %%TIME%% mínutos.",
     "subirdigno": "\/me @%%NAME%% voc\u00ea \u00e9 digno do martelo, meus parab\u00e1ins.",
-    "thorndigno": "\/me @%%NAME%% voc\u00ea n\u00e3o \u00e9 digno do martelo."
+    "thorndigno": "\/me @%%NAME%% voc\u00ea n\u00e3o \u00e9 digno do martelo.",
     "trans": "/me ama dar beijos.",
     "nousertrans": "/em Não vejo %%NAME%% na sala. Vou procurar outro pra beijar.",
     "selftrans": "/me @%%NAME%%, você não pode beijar a si mesmo, beije outra pessoa!",
