--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -147,6 +147,10 @@
     "nousercookie": "\/em N\u00e3o vejo %%NAME%% na sala. Vou comer esse cookie sozinho.",
     "selfcookie": "\/me @%%NAME%%, voc\u00ea \u00e9 mesquinho, n\u00e9? Dando cookies a si mesmo, bah. Compartilhe um pouco com os outros!",
     "cookie": "\/me @%%NAMETO%%, %%NAMEFROM%% %%COOKIE%%",
+    "subirnemperto": "\/me @%%NAME%% voc\u00ea n\u00e3o é digno nem de chegar perto do martelo.",
+    "subircd": "\/me @%%NAME%% voc\u00ea s\u00f3 poder\u00e1 tentar levantar o martelo novamente em %%TIME%% mínutos.",
+    "subirdigno": "\/me @%%NAME%% voc\u00ea \u00e9 digno do martelo, meus parab\u00e1ins.",
+    "subirndigno": "\/me @%%NAME%% voc\u00ea n\u00e3o \u00e9 digno do martelo.",
     "cycleguardtime": "\/me [@%%NAME%%] A prote\u00e7\u00e3o de ciclo agora \u00e9: %%TIME%% minuto(s).",
     "dclookuprank": "\/me [@%%NAME%%] Somente Seguran\u00e7as ou superiores podem usar !dclookup em outros usu\u00e1rios.",
     "emojilist": "\/me Emojis: %%LINK%%",
